# ADB_Helper

./: .gitignore  ADB_Helper_Technical_Specification.md  CLAUDE.md  README.md  UNIMPLEMENTED_FEATURES.md  adb_helper.spec  design.html  handoff.md  main.py  pyproject.toml  redesign_plan.md
ADB_Helper-handoff_Claude_Design/adb-helper/: README.md
ADB_Helper-handoff_Claude_Design/adb-helper/project/: ADB_Helper Redesign.html
adb-helper_handoff_Claude_Design/: README.md
adb-helper_handoff_Claude_Design/project/: app.jsx  data.jsx  icons.jsx  index.html  styles.css
adb-helper_handoff_Claude_Design/project/modules/: apps.jsx  buttons.jsx  connections.jsx  info.jsx  installer.jsx  logcat.jsx  scrcpy.jsx  settings.jsx  terminal.jsx
adb-helper_handoff_Claude_Design/project/uploads/: ADB_Helper_TZ_v1_1.docx
db/migrations/: 0001_initial.sql  0002_paired_connect_port.sql
design-export/: DESIGN_TOKENS.json  IMPLEMENTATION_GUIDE.md  dark.qss  light.qss
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  style.css
frontend/src/assets/: qwebchannel.js
frontend/src/components/: NavIcon.vue  Sidebar.vue  StatusBar.vue
frontend_dist/: index.html
frontend_dist/assets/: index-BF9pP7O2.css  index-BLx87eTX.js  index-CtnVWMOE.css  index-DhNuKxIx.css  index-JOPbOT69.js  index-_wOwqr0h.js
src/adb_helper/: __init__.py  __main__.py
tests/: conftest.py  test_apps_parsers.py  test_device_info_parsers.py  test_installer_queue.py  test_to_jsonable.py
(+86 files in other folders)
